[package]
name = "i-seek-you-server"
description = "A WebRTC server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = "0.17.2"
