[package]
name = "turn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fibers_global = "0.1.2"
rusturn = "0.0.4"
stun_codec = "0.2.0"
trackable = "1.2.0"
uuid = { version = "0.8", features = ["v4"] }
