[package]
name = "turn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turn = "0.5.4"
tokio = { version = "1.18.1", features = ["full"] }
util = { package = "webrtc-util", version = "0.5.3", default-features = false, features = [
    "conn",
    "vnet",
] }
